--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         <activity
             android:name=".SignIn"
             android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
+            android:name=".Show_travilsActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
         <activity android:name=".SignUp"
             android:theme="@style/Theme.Design.NoActionBar" />
         <activity android:name=".MainActivity"
