--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelApp">
         <activity
+            android:name=".Home"
+            android:theme="@style/DemoTheme"
+            />
+        <activity
             android:name=".SignIn"
-            android:theme="@style/Theme.Design.NoActionBar" />
+            android:theme="@style/DemoTheme" />
         <activity
             android:name=".Show_travilsActivity"
-            android:theme="@style/Theme.Design.NoActionBar" />
-        <activity android:name=".SignUp"
-            android:theme="@style/Theme.Design.NoActionBar" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:theme="@style/DemoTheme" />
+        <activity
+            android:name=".SignUp"
+            android:theme="@style/DemoTheme" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/DemoTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
