--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,17 @@
         android:roundIcon="@drawable/ic_out_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelApp">
-        <activity android:name=".Destination"
+        <activity android:name=".Profile"
+            android:theme="@style/DemoTheme"
+            />
+        <activity
+            android:name=".Destination"
             android:label="Destination"
-            android:theme="@style/DemoTheme"></activity>
-        <activity android:name=".EmailverifiyActivity"
+            android:theme="@style/DemoTheme" />
+        <activity
+            android:name=".EmailverifiyActivity"
             android:label="Destination"
-            android:theme="@style/DemoTheme"></activity>
+            android:theme="@style/DemoTheme" />
         <activity
             android:name=".Home"
             android:theme="@style/DemoTheme" />
